--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,9 @@
-
+{
+  "version": 2,
+  "builds": [
+    { "src": "api/visits.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/visits", "dest": "api/visits.js" }
+  ]
+}
